Updated templates and views

--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -2,13 +2,17 @@
 
 
 {% block title %}Home {% endblock title %}
-
+{% block navbar %}{% include 'partials/navbar.html' %}{% endblock navbar %}
 {% block content %}
 
-<div class='container mt-5'>
-Home
-<hr class='light'>
-</div>
+<div class="jumbotron">
+        <div class="container">
+          <h1 class="display-3">HOME</h1>
+          <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+          <p><a class="btn btn-primary btn-lg" href="/dashboard/" role="button">Log In &raquo;</a><a class="btn ml-3 btn-success btn-lg" href="#" role="button">Get Started Now &raquo;</a></p>
+          <p></p>
+        </div>
+      </div>
 
 
 {% endblock content %}
