--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Navbar</a>
+  <a class="navbar-brand" href="/">Nexus</a>
   <button
     class="navbar-toggler"
     type="button"
@@ -14,18 +14,19 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#"
-          >Home <span class="sr-only">(current)</span></a
-        >
-      </li>
+      
 
       <li class="nav-item">
-        <a class="nav-link" href="#">Ticket</a>
+        <a class="nav-link" href="/dashboard/">Dashboard</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/products/">Product</a>
       </li>
     </ul>
-    <span class="navbar-text">Hello, {{user.username}}</span>
-    <a class="nav-item text-light nav-link" href="/register/">Sign Up</a>
-    <a class="nav-item text-light nav-link" href="/logout/">Log Out</a>
+
+    
+    <a class="nav-item btn btn-outline-primary" href="register/">Sign up</a>
+    {% comment %} <a class="nav-item text-light nav-link" href="logout/">Log Out</a> {% endcomment %}
   </div>
+
 </nav>
