--- a/templates/base.html
+++ b/templates/base.html
@@ -34,6 +34,8 @@
       
     </main>
 
+    {% include 'partials/footer.html' %}
+
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
