--- a/templates/base.html
+++ b/templates/base.html
@@ -9,18 +9,20 @@
     />
 
     <title>{% block title %} {% endblock %}</title>
+     {% load static %}
+   <link
+      rel="stylesheet"
+      href="{% static 'css/bootstrap.min.css'%}"
+      type="text/css"
+    />
 
-    {% load static %}
+   
     <link
       rel="stylesheet"
       href="{% static 'css/styles.css'%}"
       type="text/css"
     />
-    <link
-      rel="stylesheet"
-      href="{% static 'css/bootstrap.min.css'%}"
-      type="text/css"
-    />
+   
   </head>
   <body>
     <!--Nav Bar-->
@@ -29,8 +31,9 @@
 
     
     <main role="main">
+    	<div class="container-fluid">
       {% block content %}{% endblock %}
-      
+          </div>
       
     </main>
 
