--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,3 +1,7 @@
+body{
+    background-color: #ebeff5;
+}
+
 .sidenav {
     height: 100%;
     width: 160px;
@@ -21,5 +25,22 @@
 .sidenav a:hover{
     color:#f1f1f1;
     
+}
+
+
+
+
+
+#total-orders{
+    background-color: #4cb4c7;
+}
+
+
+#orders-delivered{
+    background-color: #7abecc;
+}
+
+#orders-pending{
+    background-color: #7CD1C0;
 }
 
