--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -1,3 +1,3 @@
-<footer class="pt-3 pb-2 text-center text-light border-top bg-dark">
+<footer class="pt-3 pb-2 text-center mastfoot mt-auto text-light border-top bg-dark">
       <p>&copy; Company 2021</p>
 </footer>
