--- a/templates/main/products.html
+++ b/templates/main/products.html
@@ -1,51 +1,36 @@
 {% extends 'base.html' %}
-
-
-{% block title %}Products{% endblock title %}
-
-{% block navbar %}{% include 'partials/navbar.html' %}{% endblock navbar %}
+{% block title %}Products{% endblock title %} 
+{% block navbar %}{% include 'partials/navbar.html' %}{% endblock navbar %} 
 
 {% block content %}
 
-  
+<div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+  <h1 class="display-4">Products</h1>
+  <p class="lead">
+    Quickly build an effective pricing table for your potential customers with
+    this Bootstrap example. It's built with default Bootstrap components and
+    utilities with little customization.
+  </p>
+</div>
 
-    <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-      <h1 class="display-4">Pricing</h1>
-      <p class="lead">Quickly build an effective pricing table for your potential customers with this Bootstrap example. It's built with default Bootstrap components and utilities with little customization.</p>
-    </div>
-
-    <div class="container">
-      <div class="card-deck mb-3 text-center">
-        <div class="card mb-4 box-shadow">
-          <div class="card-header">
-            <h4 class="my-0 font-weight-normal">BBQ GRILL</h4>
-          </div>
-          <div class="card-body">
-            <h1 class="card-title pricing-card-title">$200 </h1>
-           
-            <button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>
-          </div>
-        </div>
-        <div class="card mb-4 box-shadow">
-          <div class="card-header">
-            <h4 class="my-0 font-weight-normal">Kitchen/h4>
-          </div>
-          <div class="card-body">
-            <h1 class="card-title pricing-card-title">$100</h1>
-           
-            <button type="button" class="btn btn-lg btn-block btn-primary">Get started</button>
-          </div>
-        </div>
-        <div class="card mb-4 box-shadow">
-          <div class="card-header">
-            <h4 class="my-0 font-weight-normal">Ball</h4>
-          </div>
-          <div class="card-body">
-            <h1 class="card-title pricing-card-title">$30 </h1>
-        
-            <button type="button" class="btn btn-lg btn-block btn-primary">Contact us</button>
-          </div>
-        </div>
+<div class="container">
+  <div class="card-deck mb-3 text-center">
+    {% for product in products %}
+    <div class="card mb-4 box-shadow">
+      <div class="card-header">
+        <h4 class="my-0 font-weight-normal">{{product.name}}</h4>
       </div>
+      <div class="card-body">
+        <h1 class="card-title pricing-card-title">${{product.price}}</h1>
+        <p class="lead">{{product.description}}</p>
+        <p class="">Category : {{product.category}}</p>
+        <button type="button" class="btn btn-lg btn-block btn-outline-primary">
+          Purchase
+        </button>
+      </div>
+    </div>
+    {% endfor %}
+  </div>
 
-{% endblock content %}
+  {% endblock content %}
+</div>
