--- a/templates/accounts/customer.html
+++ b/templates/accounts/customer.html
@@ -7,7 +7,7 @@
 <div class="row">
 	<div class="col-md">
 		<div class="card card-body">
-			<h5>Customer:</h5>
+			<h5>Customer: {{customer.name}}</h5>
 			<hr>
 			<a class="btn btn-outline-info  btn-sm btn-block" href="">Update Customer</a>
 			<a class="btn btn-outline-danger  btn-sm btn-block" href="">Delete Customer</a>
@@ -19,8 +19,8 @@
 		<div class="card card-body">
 			<h5>Contact Information</h5>
 			<hr>
-			<p>Email: </p>
-			<p>Phone: </p>
+			<p>Email: {{customer.email}} </p>
+			<p>Phone: {{customer.phone}}</p>
 		</div>
 	</div>
 
@@ -28,7 +28,7 @@
 		<div class="card card-body">
 			<h5>Total Orders</h5>
 			<hr>
-			<h1 style="text-align: center;padding: 10px"></h1>
+			<h1 style="text-align: center;padding: 10px">{{total_orders}}</h1>
 		</div>
 	</div>
 </div>
@@ -60,6 +60,18 @@
 					<th>Update</th>
 					<th>Remove</th>
 				</tr>
+
+                {% for order in orders %}
+                <tr>
+                    <td>{{order.product}}</td>
+                    <td>{{order.product.category}}</td>
+                    <td>{{order.date_created}}</td>
+                    <td>{{order.status}}</td>
+                    <td><a href="#" class='btn-outline-success btn '>Update</a></td>
+                    <td><a href="#" class='btn-outline-danger btn '>Delete</a></td>
+                </tr>
+                
+                {% endfor %}
 
 			</table>
 		</div>
