--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="/">Nexus</a>
+  <a class="navbar-brand" href={% url 'home' %}>Nexus</a>
   <button
     class="navbar-toggler"
     type="button"
@@ -17,10 +17,10 @@
       
 
       <li class="nav-item">
-        <a class="nav-link" href="/dashboard/">Dashboard</a>
+        <a class="nav-link" href={% url 'dashboard' %}>Dashboard</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/products/">Product</a>
+        <a class="nav-link" href={% url 'products' %} >Product</a>
       </li>
     </ul>
 
