--- a/templates/base.html
+++ b/templates/base.html
@@ -9,32 +9,42 @@
     />
 
     <title>{% block title %} {% endblock %}</title>
-     {% load static %}
-   <link
+    {% load static %}
+    <link
       rel="stylesheet"
       href="{% static 'css/bootstrap.min.css'%}"
       type="text/css"
     />
 
-   
+    <!-- Font Awesome -->
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+      rel="stylesheet"
+    />
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- MDB -->
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.5.0/mdb.min.css"
+      rel="stylesheet"
+    />
+
     <link
       rel="stylesheet"
       href="{% static 'css/styles.css'%}"
       type="text/css"
     />
-   
   </head>
   <body>
     <!--Nav Bar-->
 
     {% block navbar %}{% endblock navbar %}
 
-    
     <main role="main">
-    	<div class="container-fluid">
-      {% block content %}{% endblock %}
-          </div>
-      
+      <div class="container-fluid mt-3">{% block content %}{% endblock %}</div>
     </main>
 
     {% include 'partials/footer.html' %}
@@ -54,6 +64,12 @@
       src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
+    ></script>
+
+    <!-- MDB -->
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.5.0/mdb.min.js"
     ></script>
   </body>
 </html>
