Added Material UI Design for styling

--- a/templates/accounts/order_form.html
+++ b/templates/accounts/order_form.html
@@ -1,9 +1,10 @@
 {% extends 'base.html' %}
+{% block navbar %}{% include 'partials/navbar.html' %}{% endblock navbar %}
 {% load static %}
 
 {% block content %}
 <form action="" method ="POST">
-
+    
     <input type="submit" name ="Submit">
 </form>
 {% endblock content %}
