--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -1,3 +1,8 @@
-<footer class="pt-3 pb-2 text-center mastfoot mt-auto text-light border-top bg-dark">
-      <p>&copy; Company 2021</p>
+<footer class="bg-light text-center text-lg-start">
+  <!-- Copyright -->
+  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+    © 2020 Copyright:
+    <a class="text-dark" href="#">Me</a>
+  </div>
+  <!-- Copyright -->
 </footer>
