Created order form

--- a/templates/accounts/order_form.html
+++ b/templates/accounts/order_form.html
@@ -4,7 +4,8 @@
 
 {% block content %}
 <form action="" method ="POST">
-    
+    {% csrf_token %}
+    {{form}}
     <input type="submit" name ="Submit">
 </form>
 {% endblock content %}
