Delete_order view

--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -55,8 +55,8 @@
                         <td>{{order.product}}</td>
                         <td>{{order.date_created}}</td>
                         <td>{{order.status}}</td>
-                        <td><a href="#" class='btn-outline-success btn '>Update</a></td>
-                        <td><a href="#" class='btn-outline-danger btn '>Delete</a></td>
+                        <td><a href={% url 'update_order' order.id %} class='btn-outline-success btn '>Update</a></td>
+                        <td><a href={% url 'delete_order' order.id %} class='btn-outline-danger btn '>Delete</a></td>
                     </tr>
                 {% endfor %}
 		
