CRUD functionality for Customer model

--- a/templates/accounts/customer.html
+++ b/templates/accounts/customer.html
@@ -9,8 +9,8 @@
 		<div class="card card-body">
 			<h5>Customer: {{customer.name}}</h5>
 			<hr>
-			<a class="btn btn-outline-info  btn-sm btn-block" href="">Update Customer</a>
-			<a class="btn btn-outline-danger  btn-sm btn-block" href="">Delete Customer</a>
+			<a class="btn btn-outline-info  btn-sm btn-block" href={% url 'update_customer' customer.id %}>Update Customer</a>
+			<a class="btn btn-outline-danger  btn-sm btn-block" href={% url 'delete_customer' customer.id %}>Delete Customer</a>
 
 
 		</div>
