--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -25,7 +25,7 @@
     </ul>
 
     
-    <a class="nav-item btn btn-outline-primary" href="register/">Sign up</a>
+    <a class="nav-item btn btn-outline-primary" href="/register/">Sign up</a>
     {% comment %} <a class="nav-item text-light nav-link" href="logout/">Log Out</a> {% endcomment %}
   </div>
 
