--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -10,17 +10,22 @@
           <div class="row justify-content-center">
             <div class="col-xl-5 col-md-8">
             
-               <form class="bg-white rounded shadow-5-strong p-5">
-                   <h3 class="text-center"> Register</h3>
-                <!-- Email input -->
+               <form method="POST" action="" class="bg-white rounded shadow-5-strong p-5">
+               {% csrf_token %}
+                   <h3 class="text-center">Login</h3>
+                   <br>
+                   {% for message in messages  %}
+                    <p class="alert alert-warning">{{message}}</p>
+                   {% endfor %}
+                <!-- Username input -->
                 <div class="form-outline mb-4">
-                  <input type="email" id="form1Example1" class="form-control" />
-                  <label class="form-label" for="form1Example1">Email address</label>
+                  <input type="text" id="username" name="username"class="form-control" />
+                  <label class="form-label" for="form1Example1">Username</label>
                 </div>
 
                 <!-- Password input -->
                 <div class="form-outline mb-4">
-                  <input type="password" id="form1Example2" class="form-control" />
+                  <input type="password" id="password" name="password" class="form-control" />
                   <label class="form-label" for="form1Example2">Password</label>
                 </div>
 
@@ -44,28 +49,14 @@
 
                 <!-- Submit button -->
                 <button type="submit" class="btn btn-primary btn-block">Sign in</button>
+                <br>
+                <p class="text-center">Don't have an account ? Sign up <a href="/register">here</a></p>
               </form>
               
             </div>
           </div>
         </div>
       </div>
-      <script>
-						/* Because i didnt set placeholder values in forms.py they will be set here using vanilla Javascript
-		//We start indexing at one because CSRF_token is considered and input field 
-		 */
-
-		//Query All input fields
-		var form_fields = document.getElementsByTagName('input')
-		form_fields[1].placeholder='Username..';
-		form_fields[2].placeholder='Email..';
-		form_fields[3].placeholder='Enter password...';
-		form_fields[4].placeholder='Re-enter Password...';
-
-
-		for (var field in form_fields){	
-			form_fields[field].className += ' form-control'
-		}
-	</script>
+     
 
 {% endblock content %}
