User profile completion

--- a/templates/accounts/profile.html
+++ b/templates/accounts/profile.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% block navbar %}{% include 'partials/navbar.html' %}{% endblock navbar %}
 {% block content %}
 {% include 'partials/status.html' %}
 
