--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -14,14 +14,17 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      
 
+      {% if user.is_staff  %}
+      
       <li class="nav-item">
         <a class="nav-link" href={% url 'dashboard' %}>Dashboard</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href={% url 'products' %} >Product</a>
       </li>
+      {% endif %}      
+
     </ul>
 
     {% if user.username %}
