--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -23,6 +23,12 @@
       <li class="nav-item">
         <a class="nav-link" href={% url 'products' %} >Product</a>
       </li>
+
+      {% else %}
+
+            <li class="nav-item">
+        <a class="nav-link" href={% url 'settings' %} >Settings</a>
+      </li>
       {% endif %}      
 
     </ul>
