Created password reset views

--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -43,7 +43,7 @@
 
                   <div class="col text-center">
                     <!-- Simple link -->
-                    <a href="#!">Forgot password?</a>
+                    <a href={% url 'reset_password' %}>Forgot password?</a>
                   </div>
                 </div>
 
